--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="hero_container">
     <h1> EKKALUX NGUYEN</h1>
     <p> I am a UX designer based in San Francisco passionate about  </p>
-    <p>creating <b>beautiful</b> and <b>intuitive</b> user experience. </p>
+    <p>creating beautiful and intuitive user experience. </p>
 
     <div class="middle_button_container">
       <button class="button">About Me</button>
@@ -57,7 +57,7 @@
       <img src="images/ridestarter_laptop.png">
       <div class="ridestarter_text">
         <h1> Ridestarter </h1>
-        <h2> <b>UX Research | UX Design | Brand Identity</b> </h2>
+        <h2> UX Research | UX Design | Brand Identity </h2>
         <p> A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides. </p>
         <div class="ridestarter_button">
@@ -71,7 +71,7 @@
       <img src="images/simplebox_laptop.png">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
-        <h2> <b>UX Research | UX Design | Brand Identity</b> </h2>
+        <h2> UX Research | UX Design | Brand Identity </h2>
         <p> A web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_simplebox">Case Study</button></a>
@@ -84,7 +84,7 @@
       <img src="images/more_projects/more_projects.png">
       <div class="more_projects_text">
         <h1> More Projects </h1>
-        <h2><b> UI Design | Brand Identity | Graphic Design </b></h2>
+        <h2> UI Design | Brand Identity | Graphic Design </h2>
         <p> Other projects that includes user interface design, branding, and newsletter work. </p>
         <div class="more_projects_button">
           <a href="more_projects.html"><button class="button_more">View Projects</button></a>
@@ -110,13 +110,12 @@
          want to just design; I wanted to use my passion in design to help people with their problems and see the
          positive effect it has upon their situation. My passion to be a UX designer grew when I stumbled across an
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
-         plan, and deliver design solutions. With the growing technology today, I have a strong affinity to strategize
-         simple, yet user-centric solutions to products that bridge the gap between machine, education, environmental sustainability, and health/fitness.</p>
+         plan, and deliver design solutions.
 
-
-        <p> <b>What am I currently doing?</b> I am still enrolled in the online part-time UI/UX bootcamp, prospecting to complete the program
-          in the next three months.  When I'm not working on UX related projects,
-          I enjoy hiking, traveling, hitting the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
+         <p> <b>Today's machine is growing and so are we.</b> With a strong affinity for creating
+         products that bridge the gap between technology, education, and health, I hope to strategize
+         simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
+         I enjoy hiking, traveling, hitting the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
           ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
      </div>
   </div>
