--- a/ridestarter.html
+++ b/ridestarter.html
@@ -41,6 +41,7 @@
       <p>A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides.</p>
     </div>
+
   </div>
 
 </section>
@@ -49,8 +50,8 @@
   <h2 id="summary"> OVERVIEW </h2>
   <h2 id="research"> RESEARCH </h2>
   <h2 id="design"> DESIGN </h2>
-  <h2 id="research"> USABILITY TESTING</h2>
-  <h2 id="design"> CONCLUSION </h2>
+  <h2 id="implementation"> USABILITY TESTING</h2>
+  <h2 id="conclusion"> CONCLUSION </h2>
 </nav>
 
 <section class="summary">
@@ -81,7 +82,7 @@
 
 <section class="research">
   <div class="research_container">
-    <h1> <span class="underline_black">RESEARCHING THE CHALLENGES </span> </h1>
+    <h1> RESEARCHING THE CHALLENGES  </h1><hr>
 
     <div class="survey_findings"> <b>Survey Findings</b>
       <p> At this initial stage, it was important to gain a better understanding of users' behavior of
@@ -118,9 +119,9 @@
       </div>
 
       <p> The data revealed the users' attitudes and motives towards donating. Based from the survey, there seems
-        to be major theme of users skeptical of whether they're making an impact through donation. From this inference, It's also safe to conclude that
+        to be major theme of users skeptical of whether they're making an impact through donation. From this inference, It was also safe to conclude that
       users typically make a one time donation to friends or family. These results were important in deciding not only the features of Ridestarter, but also what
-        is necessary in order to create a successful and trusting crowdfunding application.   </p>
+        was necessary in order to create a successful and trusting crowdfunding application.   </p>
       <img src="images/ridestarter/survey.png">
 
 
@@ -130,7 +131,7 @@
       <p> I analyzed four different crowdfunding companies in order to find out more about how
         they operate, their strengths/weaknesses, features, and differentiators. Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
         features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
-        it's important that the application contains features unique to charity bike rides as well as some of the
+        it was important that the application contains features unique to charity bike rides as well as some of the
           important crowdfunding elements such as a progress bar and fundraising goal.<a href="https://docs.google.com/spreadsheets/d/1f1FW3b75Uf-R_5KEUwpLFI_N9QV515_YGSm9SxUTedM/edit?usp=sharing" target="_blank">
           You can take a closer look of the competitive analysis here. </a> </p>
 
@@ -151,7 +152,7 @@
 
   <section class="design_choices">
     <div class="design_container">
-      <h1> <span class="underline_black">RIDING THROUGH THE DESIGN CHOICES </span> </h1>
+      <h1> RIDING THROUGH THE DESIGN CHOICES </h1><hr>
 
       <div class="user_flow"> <b>User Flow</b>
         <p>Based on the user research, I finalized four user stories that I believe
@@ -165,11 +166,11 @@
       </div>
 
       <div class="branding"> <b>Branding and Typography</b>
-        <p> With Ridestarter being a crowdfunding application,<b> evoking trust</b> is one of the
+        <p> With Ridestarter being a crowdfunding application, evoking trust is one of the
           most important facets in getting users to use the site. Green is used as the primary color for
           Ridestarter because not only green associates with money flow, but also promotes
           a love for nature and foliages, which are all presented during a rider's journey. After careful consideration
-          about the logo, I went with the less is more principle and used a typeface (Noto Sans) and a bike
+          about the logo, I went with the less is more principle and used typeface Noto Sans and a bike
           logo to evoke both professionalism and easy identification. </p>
 
         <img src="images/ridestarter/ridestarter_branding.png">
@@ -189,12 +190,12 @@
 
 <section class="implementation">
   <div class="implement_container">
-    <h1> <span class="underline_black">GEARING THE DESIGN IMPLEMENTATION </span> </h1>
+    <h1> GEARING THE DESIGN IMPLEMENTATION </span> <hr>
     <div class="user_testing"> <b>Usability Testing</b>
-      <p> Uesr testing was important to either gather design feedback or any errors that user experienced.
+      <p> User testing was important to gather either design feedback or any errors that user experienced.
         For this process, I conducted both a contextual interview on four different users and an unmoderately usability testing on usertesting.com
          to get feedback on the clickable prototypes that I created in InVision. These are some of the most important guiding questions that I asked
-        during the testing as they went through the website: </p>
+        during the testing as they navigate through the website: </p>
       <div class="highlights">
         <ul>
           <li> Look at the homepage. What do you think this website is about? </li>
@@ -238,7 +239,7 @@
   </div>
 
   <div class="final_container"> <b>High-Fidelity Prototypes </b>
-    <p> With the insights gained from user research and usability testing, Ridestarter was solidify with
+    <p> With the insights gained from user research and usability testing, Ridestarter was solidified with
       multiple sought out iterations, transforming it into high-fidelity prototypes. <a href="https://invis.io/Z2D6DKKTY" target="_blank">
         You can check out Ridestarter's interactive prototype here. </a></p>
     <img src="images/ridestarter/ridestarter_high.png">
@@ -250,19 +251,19 @@
   <div class="conclusion">
     <div class="conclusion_container">
     <h1><span class="underline_black"> CONCLUSION</span></h1>
-    <p>If given more time, I would love the opportunity to spend more time doing usability
-      testing early during the low-fidelity wireframing phase. Psychologically, I feel
-      less wedded to low-fidelity prototypes and am more likely to make the changes on
-      the user experiences. On the contrary, it’s omre difficult to give up or add a design
-      element once I have already invest in a design. </p>
+    <p>Ridestarter has a value in allowing users to exclusively search and donate to charity bike rides,
+      solving the problem of transparency in crowd-sourcing charity projects. Building an application with the goal to get people to not only get excited
+      to donate money, but also build trust and transparency in the platform requires thoughtful decisions in the design process.
+      What’s difficult, but significant was coming up with the right questions to ask in the user survey in order
+      to uncover underlying goals and motives. The interview process was a humbling experience in learning more
+       about the different perspective from both the donators and fundraisers. Asking questions and
+       empathizing to explore deeper into the users’ mind was an experience that allowed me to reflect
+       on what is considered a good user interview process.  </p>
 
-    <p>Testers were overall impressed with the design structure and content. Listening closely to users during
-      the interview process helped me empathize with their motives and thought process. Additionally,
-      analyzing user feedback and translating them into mockups is always enjoyable.
-      Based on the feedback, trustworthiness is one of the most important aspect to getting
-      users to use an application. Asking questions such as “Does this page follows the
-       current trend in modernizing the style or buttons?” This could always be improved
-       in any of my future design. </p>
+    <p>An area for improvement with Ridestarter would be to research more on what to include in a charity ride crowdfunding platform -
+      what is needed to either get people interested in riding or donating to ride projects. The good news is that an application
+      is never a final product as design and iteration is an ongoing process. I hope to further improve on the aesthetic and
+      functionality of Ridestarter to create a good crowdfunding user experience. </p>
 
     </div>
   </div>
