--- a/simplebox.html
+++ b/simplebox.html
@@ -48,8 +48,8 @@
 
 <nav class="navigation">
   <h2 id="summary"> OVERVIEW </h2>
-  <h2 id="solution"> RESEARCH </h2>
-  <h2 id="research"> DESIGN </h2>
+  <h2 id="research"> RESEARCH </h2>
+  <h2 id="design"> DESIGN </h2>
   <h2 id="usability"> USABILITY TESTING </h2>
   <h2 id="results"> CONCLUSION </h2>
 </nav>
@@ -83,7 +83,7 @@
 <section class="solution">
   <div class="solution_container">
     <h1> <span class="underline_black"> SOLUTION </span></h1>
-    <p>  simpleBox simplifies and creates a cloud-based file storage service that is easily accessible for all users to conveniently save and
+    <p>  simpleBox simplifies the problem and creates a cloud-based file storage service that is easily accessible for all users to conveniently save and
       share content and collaborate with other users across multiple devices. <a href="https://invis.io/9ME9YEZRD"> View the clickable prototypes here. </a></p>
   </div>
 </section>
@@ -173,11 +173,11 @@
     <ul>
       <li> Based from the in-person testing with some of my colleagues, users had a positive response to the application and were able to navigate through
         the site smoothly. They also liked the simplicity of the site and the logo.  </li>
-      <li> To gain more insights about the application, I also conduced an unmoderated usability testing on Peek. Based from the
-        test, user was able to quickly idenify what the application does, referring to similiarites to other tools such as dropbox, where you can store
+      <li> To gain more insights about the application, I also conduced an unmoderated usability test on Peek. Based from the
+        test, the user was able to quickly identify simpleBox's functionality, referring to similiarites to other applications such as dropbox, where you can store
         and save documents. Since the test was unmoderated, I wasn't able to follow up with questions or answer some of the concerns that
         the tester had. Although the user might not have known that this is a medium-fidelity prototype, she was confused about the color scheme of
-        black, white, and gray. However, it was significant that the tester understood the functionality of simpleBox. <a href="http://www.usertesting.com/v/5adc95f3-123c-44f8-a895-7e87d103c3be?encrypted_video_handle=4WyztmbyzJ7n2ccqSBtaWg&shared=hiWH_1Eg" target="_blank">
+        black, white, and gray. However, it was significant that the tester understood the goal of simpleBox. <a href="http://www.usertesting.com/v/5adc95f3-123c-44f8-a895-7e87d103c3be?encrypted_video_handle=4WyztmbyzJ7n2ccqSBtaWg&shared=hiWH_1Eg" target="_blank">
           Click here to view the full video </a> </li>
     </ul>
   </div>
@@ -192,7 +192,7 @@
   <h1> HIGH-FIDELITY PROTOTYPES </h1><hr>
   <p>After going through user testing for the low/medium prototypes and making iteration based on feedback, I used
     Sketch to create high-fidelity prototypes. Then I made another clickable prototypes on InVision and asked a few more users to
-    navigate through the prototypes and provide feedback. I also conducted another unmoderated test. <a href="http://www.usertesting.com/v/f0ad361e-6fcd-4a05-8e1c-5c977715689e?encrypted_video_handle=tHdsGv9x0MymeSOqYu_RvQ&shared=M2VgP9nf">
+    navigate through the prototypes and provide feedback. I also conducted another unmoderated user test. <a href="http://www.usertesting.com/v/f0ad361e-6fcd-4a05-8e1c-5c977715689e?encrypted_video_handle=tHdsGv9x0MymeSOqYu_RvQ&shared=M2VgP9nf">
     You can view the full video here.</a> Below are the discussion questions
     I asked during the usability testing. </p>
 
@@ -207,7 +207,7 @@
   </div>
 
   <p>Overall, users thought that the experience was pleasing and that the application is presentable in a simplified, yet professional design.
-  The responses were more convincing when testing the high-fidelity wireframes because users were able to the final visual of the application. When asked to sign in and create
+  The responses were more convincing when testing with the high-fidelity wireframes because users were able final visual of the application. When asked to sign in and create
 either a note, image, or link, users had no trouble taking that action and were able to do so without any frustrations.</p>
 
   <div class="highlights">
