--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Brand Identity </h2>
-        <p> A web application that allows users to collect information and store it in a centralized location.</p>
+        <p> A SaaS web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_simplebox">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
@@ -113,7 +113,7 @@
          plan, and deliver design solutions.
 
          <p> <b>Today's machine is growing and so are we.</b> With a strong affinity for creating
-         products that bridge the gap between technology, education, and health, I hope to strategize
+         products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
          I enjoy hiking, traveling, hitting the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
           ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
