--- a/simplebox.html
+++ b/simplebox.html
@@ -207,8 +207,8 @@
   </div>
 
   <p>Overall, users thought that the experience was pleasing and that the application is presentable in a simplified, yet professional design.
-  The responses were more convincing when testing with the high-fidelity wireframes because users were able final visual of the application. When asked to sign in and create
-either a note, image, or link, users had no trouble taking that action and were able to do so without any frustrations.</p>
+  The responses were more convincing when testing with the high-fidelity wireframes because users were able easily visualize the final presentation of the platform.
+  In addition, when asked to sign in and create either a note, image, or link, users had no trouble taking that action and were able to do so without any frustrations.</p>
 
   <div class="highlights">
     <p> From the testing, I found out that there was a slight delay when users were attempting to add content to simpleBox. To tackle this issue, I created two
@@ -232,10 +232,12 @@ either a note, image, or link, users had no trouble taking that action and were 
       Photoshop/Sketch, the final product was completed with harmoniously-working colors and
       design elements that achieve simpleBox’s goal in creating a friendly user experience in
       collecting and sharing contents. </p>
-    <p>This was my first project going through the different UX process as a designer. This project
-      had made me realize how important it is to test often and early to create an intuitive user experience
-      for potential end-users. Designing is more than just creating visually appealing elements.
-      Data and research are the main components to synthesizing the design elements. <a href="https://invis.io/8PC2WA7AH"> Click here to view the interactive prototype </a> </p>
+
+    <p>From simpleBox, I learned the importance of relying on data and interviews to create an intuitive product for the end-user.
+      Designing is more than just creating visually appealing elements. It’s easy to detach myself from designing from the user’s experience, but something that is designed from my own satisfactory might not be intuitive to other users.
+      In addition, understanding the code methods for mobile-first development was slightly challenging, but worth it in today’s advancement in creating good user experience.
+      It’s important to keep in mind that many users today use their mobile devices to browse through different applications on the net.
+      <a href="https://invis.io/8PC2WA7AH"> Click here to view the interactive prototype </a> </p>
 
     <img src="images/simplebox/final_product.png">
 
