--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ekkalux Nguyen</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/scrolldown.js"></script>
@@ -29,8 +30,8 @@
   <div class="hero_overlay"></div>
 
   <div class="hero_container">
-    <h1> EKKALUX NGUYEN</h1>
-    <p> I am a UX designer based in San Francisco passionate about  </p>
+    <h1 class="bounceInDown animated"> EKKALUX NGUYEN</h1>
+    <p>I am a UX designer based in San Francisco passionate about  </p>
     <p>creating beautiful and intuitive user experience. </p>
 
     <div class="middle_button_container">
@@ -71,7 +72,7 @@
       <img src="images/simplebox_laptop.png">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
-        <h2> UX Research | UX Design | Brand Identity </h2>
+        <h2> UX Research | UX Design | Responsive Web Design </h2>
         <p> A SaaS web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_simplebox">Case Study</button></a>
