--- a/ridestarter.html
+++ b/ridestarter.html
@@ -6,6 +6,7 @@
   <title>Ekkalux Nguyen</title>
   <link rel="stylesheet" href="css/ridestarter.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/ridestarter.js"></script>
@@ -32,11 +33,11 @@
 
   <div class="hero_container">
 
-    <div class="hero_container_img">
+    <div class="hero_container_img animated pulse">
       <img src="images/ridestarter/ridestarter_hero_image.png">
     </div>
 
-    <div class="title_container">
+    <div class="title_container animated fadeinRight">
       <h1> RIDESTARTER </h1>
       <p>A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides.</p>
@@ -60,7 +61,22 @@
     <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to
       either raise funds or donate to charity bike rides across the world. Users can choose to create a bike
       campaign, supporting specific causes or browse through the different bike charities that are offered.</p>
+
   </div>
+</section>
+
+<section class="summary_deliver">
+  <h4 class="deliver">Duration<hr>
+    <p>2 Months </p>
+  </h4>
+
+  <h4 class="deliver"> Methods <hr>
+    <p> UX Research, Contextual Interviews, Competitive Analysis, Usability testing </p>
+  </h4>
+
+  <h4 class="deliver"> Tools <hr>
+    <p> Sketch, Balsamiq, Photoshop, Illustrator, Invision </p>
+  </h4>
 </section>
 
 <section class="solution_problem">
