--- a/simplebox.html
+++ b/simplebox.html
@@ -67,6 +67,20 @@
   </div>
 </section>
 
+<section class="summary_deliver">
+  <h4 class="deliver">Duration<hr>
+    <p>2 Months </p>
+  </h4>
+
+  <h4 class="deliver"> Methods <hr>
+    <p> UX Research, Contextual Interviews, Competitive Analysis, Usability Testing, Responsive Web Design </p>
+  </h4>
+
+  <h4 class="deliver"> Tools <hr>
+    <p> Sketch, Balsamiq, Photoshop, Illustrator, Invision, HTML, CSS, Javascript </p>
+  </h4>
+</section>
+
 <!-- SUMMARY SUMMARY SUMMARY -->
 
 <!-- SOLUTION RESERACH SOLUTION -->
