--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
   <div class="hero_overlay"></div>
 
   <div class="hero_container">
-    <h1 class="bounceInDown animated"> EKKALUX NGUYEN</h1>
-    <p>I am a UX designer based in San Francisco passionate about  </p>
-    <p>creating beautiful and intuitive user experience. </p>
+    <h1>EKKALUX NGUYEN</h1>
+    <p>I am a UX designer based in San Francisco passionate about
+    creating beautiful and intuitive user experience. </p>
 
     <div class="middle_button_container">
       <button class="button">About Me</button>
     </div>
 
-    <div class="arrow_down_container">
+    <div class="arrow_down_container animated flip">
       <i class="fa fa-arrow-circle-o-down fa-4x"></i>
     </div>
   </div>
