--- a/simplebox.html
+++ b/simplebox.html
@@ -6,6 +6,7 @@
   <title>Ekkalux Nguyen</title>
   <link rel="stylesheet" href="css/simplebox.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/simplebox.js"></script>
@@ -31,12 +32,16 @@
   <div class="arrow_back_container">
     <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:#7D9DBD"></i></a>
   </div>
+
   <div class="hero_container">
     <img src="images/simplebox/simplebox_background.png"></img>
     <div class="hero_content">
       <h1> SIMPLEBOX </h1>
       <p>A web application that allows users to collect information and store it in a centralized location.<p/>
 
+      <div class="arrow_down_container animated flip">
+        <i class="fa fa-arrow-circle-o-down fa-5x" style="color:#7D9DBD"></i>
+      </div>
     </div>
   </div>
 
