--- a/ridestarter.html
+++ b/ridestarter.html
@@ -33,14 +33,18 @@
 
   <div class="hero_container">
 
-    <div class="hero_container_img animated pulse">
+    <div class="hero_container_img">
       <img src="images/ridestarter/ridestarter_hero_image.png">
     </div>
 
-    <div class="title_container animated fadeinRight">
+    <div class="title_container">
       <h1> RIDESTARTER </h1>
       <p>A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides.</p>
+
+        <div class="arrow_down_container animated flip">
+          <i class="fa fa-arrow-circle-o-down fa-5x" style="color:#75B46F"></i>
+        </div>
     </div>
 
   </div>
