--- a/ridestarter.html
+++ b/ridestarter.html
@@ -214,7 +214,7 @@
     <div class="user_testing"> <b>Usability Testing</b>
       <p> User testing was important to gather either design feedback or any errors that user experienced.
         For this process, I conducted both a contextual interview on four different users and an unmoderately usability testing on usertesting.com
-         to get feedback on the clickable prototypes that I created in InVision. These are some of the most important guiding questions that I asked
+         to get feedback on the clickable prototypes that I created in InVision. These are some of the guiding questions that I asked
         during the testing as they navigate through the website: </p>
       <div class="highlights">
         <ul>
