--- a/simplebox.html
+++ b/simplebox.html
@@ -29,18 +29,19 @@
 <!-- HERO HERO HERO -->
 
 <section class="hero">
+  <div class="hero_overlay"> </div>
+
   <div class="arrow_back_container">
-    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:#7D9DBD"></i></a>
+    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:white"></i></a>
   </div>
 
   <div class="hero_container">
-    <img src="images/simplebox/simplebox_background.png"></img>
     <div class="hero_content">
       <h1> SIMPLEBOX </h1>
       <p>A web application that allows users to collect information and store it in a centralized location.<p/>
 
       <div class="arrow_down_container animated flip">
-        <i class="fa fa-arrow-circle-o-down fa-5x" style="color:#7D9DBD"></i>
+        <i class="fa fa-arrow-circle-o-down fa-5x" style="color:white"></i>
       </div>
     </div>
   </div>
