--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="simplebox_container">
-      <img src="images/simplebox_laptop.png">
+      <img src="images/simplebox_cover.png">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Responsive Web Design </h2>
