--- a/ridestarter.html
+++ b/ridestarter.html
@@ -27,15 +27,15 @@
 <body>
 
 <section class="hero">
+
+  <div class="hero_overlay"> </div>
+
   <div class="arrow_back_container">
-    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:#75B46F"></i></a>
+    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:white"></i></a>
   </div>
 
   <div class="hero_container">
 
-    <div class="hero_container_img">
-      <img src="images/ridestarter/ridestarter_hero_image.png">
-    </div>
 
     <div class="title_container">
       <h1> RIDESTARTER </h1>
@@ -43,7 +43,7 @@
         looking to either raise funds or donate to charity bike rides.</p>
 
         <div class="arrow_down_container animated flip">
-          <i class="fa fa-arrow-circle-o-down fa-5x" style="color:#75B46F"></i>
+          <i class="fa fa-arrow-circle-o-down fa-5x" style="color:white"></i>
         </div>
     </div>
 
