--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/hover.css">
+  <link href="css/hover-min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/scrolldown.js"></script>
@@ -55,7 +57,7 @@
   <div class="project_container">
 
     <div class="ridestarter_container">
-      <img src="images/ridestarter_laptop.png">
+      <img src="images/ridestarter_laptop.png" class="hvr-hang">
       <div class="ridestarter_text">
         <h1> Ridestarter </h1>
         <h2> UX Research | UX Design | Brand Identity </h2>
@@ -69,7 +71,7 @@
     </div>
 
     <div class="simplebox_container">
-      <img src="images/simplebox_cover.png">
+      <img src="images/simplebox_cover.png" class="hvr-hang">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Responsive Web Design </h2>
@@ -82,7 +84,7 @@
     </div>
 
     <div class="more_projects">
-      <img src="images/more_projects/more_projects.png">
+      <img src="images/more_projects/more_projects.png" class="hvr-hang">
       <div class="more_projects_text">
         <h1> More Projects </h1>
         <h2> UI Design | Brand Identity | Graphic Design </h2>
@@ -113,7 +115,7 @@
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
          plan, and deliver design solutions.
 
-         <p> <b>Today's machine is growing and so are we.</b> With a strong affinity for creating
+         <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
          I enjoy hiking, traveling, hitting the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
